--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-!DOCTYPE
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alura Books</title>
+</head>
 <body>
     <section class="container principal">
-    <div>
-    <h1>com o combo+, você pode aproveitar a Alura+ e o Alura Lingua por um preço único.</h1>
-    <img src="img/combo.png" alt="O combo+ é a junção do alura+ e o alura Lingua">
-    <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-    <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-    <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
-    
-    <div>
-</section>
+        <div>
+        <h1>com o combo+, você pode aproveitar a Alura+ e o Alura Lingua por um preço único.</h1>
+        <img src="img/combo.png" alt="O combo+ é a junção do alura+ e o alura Lingua">
+        <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+        <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        
+        <div>
+    </section>
 </body>
+</html>
