--- a/index.html
+++ b/index.html
@@ -22,3 +22,36 @@
     </section>
 </body>
 </html>
+<section class="container secundario
+
+<img src="img/Plataformas.png" alt="um monitor e um celular com a ature plus aberta" class secundеrа злерея <div class="container descricao">
+
+<h2 class="descricao titulo">Assista do seu jeito</h2>
+
+<p class="descrican texto Aproveite a tela grande da TV ou assista na tablet, lapten, celular e setras aparelhos. Nossa seleção de cursos não para de crescer.</p>
+
+</div>
+
+</section >
+
+<section
+
+class="container secundario">
+
+<div class="container descricao">
+
+<p class="descricao textos
+
+</p>
+
+Só o Combo oferece Alura e Alura Lingua juntos para você ter acesso a cursos de diverses areas da tecnologia e aprender inglés ou espanhol, onde e come quiser.
+
+<
+
+a href="www.alura.com.br class="container botao secundario botan containersAssine Cambo
+
+</div>
+
+<img
+
+src="img/Telas.png" alt="Tela de alura e alura lingua" class="secundario g
