--- a/index.html
+++ b/index.html
@@ -55,3 +55,38 @@ a href="www.alura.com.br class="container botao secundario botan containersAssin
 <img
 
 src="img/Telas.png" alt="Tela de alura e alura lingua" class="secundario g
+an
+
+<h2 class="dispositivos titula">Disponivel nos seus dispositivos favoritos</h2
+
+<ul class="dispositivos lista
+<ing sting/tv.png" alt="Icone de televisão">
+<h3 class Lista item">TV</h3>
+<li>
+<h3 class="lista item Computador</
+</li>
+<img src="img/celular.png" alt="Icone de celular">
+<h3 class="lista item Celular</h3>
+</li>
+<img src="img/computador prig" alt="Icone de computador">
+</ul>
+</section>
+<footer class="rodape">
+<img src="img/Logo.png" alt="Alura" class="rodape logo
+< ul class="rodape Lista">
+<li class="lista link">
+<a href="#">Idioma</a>
+</li>
+<li class="lista link">
+<a href="#">Dispositivos compatíveis</a>
+</li>
+<li class="lista Link">
+<a href="#">Contrato de assinatura</a>
+</li>
+<li class="liste Link">
+<a href="#">Politica de privacidade</a>
+</li>
+<li class="lista link">
+<a href="#">Proteção de dados no Brasil</a>
+<li class="lista link">
+<a href="#">Anuncios personalizados</a>
