--- a/index.html
+++ b/index.html
@@ -90,3 +90,16 @@ an
 <a href="#">Proteção de dados no Brasil</a>
 <li class="lista link">
 <a href="#">Anuncios personalizados</a>
+/i>
+
+<li class="lista link">
+
+<a href="#">Ajuda</a>
+
+</li>
+
+I
+
+<p class="rodape texto"> 2021 Alura, Alura e Alura Lingua. Todos os direitos reservados. Serviço de assinatura paga. Conteuds sujeito a disponibilidade, <p class="rodape texto">Alura é um serviço pago, baseado en assinatura e sujeito a termos e condições. O serviço Alura é comercializate por Advs Sistemas
+
+OCITIVO
