--- a/index.html
+++ b/index.html
@@ -17,89 +17,79 @@
         <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
         <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
         <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
-        
         <div>
     </section>
 </body>
 </html>
 <section class="container secundario
+<img src="img/Plataformas.png" alt="um monitor e um celular com a alura plus aberta" class="secundario-imagem">
+    <div class="container-descricao">
+    <h2 class="descricao titulo">Assista do seu jeito</h2>
 
-<img src="img/Plataformas.png" alt="um monitor e um celular com a ature plus aberta" class secundеrа злерея <div class="container descricao">
+<p class="descricao-texto"> Aproveite a tela grande da TV ou assista na tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+   </div>
+   </section >
+<section class="container secundario">
+<div class="container-descricao">
+<p class="descricao-texto">
+ Só o Combo oferece Alura+ e Alura Lingua juntos para você ter acesso a cursos de diverses áreas da tecnologia e aprender inglês ou espanhol, onde e come quiser.
+  </p>
 
-<h2 class="descricao titulo">Assista do seu jeito</h2>
+<a href="www.alura.com.br" class="container-botao secundario-botao" container>Assine o Combo+</a>
+  </div>
+<img src="img/Telas.png" alt="Tela de alura+ e alura lingua" class="secundario-imagem">
+   </section
+   <section class="dispositivos">
+   <h2 class="dispositivos-titulo">Disponivel nos seus dispositivos favoritos</h2>
+   
+   <ul class="dispositivos-lista">
+    <li>
 
-<p class="descrican texto Aproveite a tela grande da TV ou assista na tablet, lapten, celular e setras aparelhos. Nossa seleção de cursos não para de crescer.</p>
+<img src="img/tv.png" alt="Icone de televisão">
+<h3 class="Lista-item">TV</h3>
 
-</div>
-
-</section >
-
-<section
-
-class="container secundario">
-
-<div class="container descricao">
-
-<p class="descricao textos
-
-</p>
-
-Só o Combo oferece Alura e Alura Lingua juntos para você ter acesso a cursos de diverses areas da tecnologia e aprender inglés ou espanhol, onde e come quiser.
-
-<
-
-a href="www.alura.com.br class="container botao secundario botan containersAssine Cambo
-
-</div>
-
-<img
-
-src="img/Telas.png" alt="Tela de alura e alura lingua" class="secundario g
-an
-
-<h2 class="dispositivos titula">Disponivel nos seus dispositivos favoritos</h2
-
-<ul class="dispositivos lista
-<ing sting/tv.png" alt="Icone de televisão">
-<h3 class Lista item">TV</h3>
+    </li>
+    <li>
+        <img src="" alt="icone de computador"
+     <h3 class="lista-item"> Computador</h3>
+</li>
 <li>
-<h3 class="lista item Computador</
-</li>
-<img src="img/celular.png" alt="Icone de celular">
-<h3 class="lista item Celular</h3>
-</li>
+
+   <img src="img/celular.png" alt="Icone de celular">
+<h3 class="lista-item">Celular</h3>
+   </li>
+</ul>
+</section>
+<footer class="rodape">
 <img src="img/computador prig" alt="Icone de computador">
 </ul>
 </section>
 <footer class="rodape">
-<img src="img/Logo.png" alt="Alura" class="rodape logo
-< ul class="rodape Lista">
-<li class="lista link">
-<a href="#">Idioma</a>
+<img src="img/Logo.png" alt="Alura" class="rodape-logo">
+    <ul class="rodape-Lista">
+   <li class="lista-link">
+  <a href="#">Idioma</a>
 </li>
-<li class="lista link">
+  <li class="lista-link">
 <a href="#">Dispositivos compatíveis</a>
 </li>
 <li class="lista Link">
 <a href="#">Contrato de assinatura</a>
 </li>
-<li class="liste Link">
+<li class="liste-Link">
 <a href="#">Politica de privacidade</a>
 </li>
-<li class="lista link">
-<a href="#">Proteção de dados no Brasil</a>
-<li class="lista link">
+<li class="lista-link">
+  <a href="#">Proteção de dados no Brasil</a>
+  </li>
+  <li class="lista-link">
 <a href="#">Anuncios personalizados</a>
-/i>
+  </li>
+<li class="lista-link">
+   <a href="#">Ajuda</a>
+ </li>
+</ul>
 
-<li class="lista link">
-
-<a href="#">Ajuda</a>
-
-</li>
-
-I
-
-<p class="rodape texto"> 2021 Alura, Alura e Alura Lingua. Todos os direitos reservados. Serviço de assinatura paga. Conteuds sujeito a disponibilidade, <p class="rodape texto">Alura é um serviço pago, baseado en assinatura e sujeito a termos e condições. O serviço Alura é comercializate por Advs Sistemas
-
-OCITIVO
+<p class="rodape-texto"> 2021 Alura, Alura+ e Alura Lingua. Todos os direitos reservados. Serviço de assinatura paga. Conteuds sujeito a disponibilidade.>
+    <p class="rodape-texto">Alura+ é um serviço pago, baseado en assinatura a sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas.>
+    </footer>
