--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     </section>
 </body>
 </html>
-<section class="container secundario
-<img src="img/Plataformas.png" alt="um monitor e um celular com a alura plus aberta" class="secundario-imagem">
+<section class="container secundario">
+<img src="/img/Plataformas.png" alt="um monitor e um celular com a alura plus aberta" class="secundario-imagem">
     <div class="container-descricao">
-    <h2 class="descricao titulo">Assista do seu jeito</h2>
-
-<p class="descricao-texto"> Aproveite a tela grande da TV ou assista na tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+    <h2 class="descricao-titulo">Assista do seu jeito</h2>
+     <p class="descricao-texto"> Aproveite a tela grande da TV ou assista na tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
    </div>
    </section >
 <section class="container secundario">
@@ -37,7 +36,7 @@
 
 <a href="www.alura.com.br" class="container-botao secundario-botao" container>Assine o Combo+</a>
   </div>
-<img src="img/Telas.png" alt="Tela de alura+ e alura lingua" class="secundario-imagem">
+<img src="/img/Telas.png" alt="Tela de alura+ e alura lingua" class="secundario-imagem">
    </section
    <section class="dispositivos">
    <h2 class="dispositivos-titulo">Disponivel nos seus dispositivos favoritos</h2>
@@ -45,7 +44,7 @@
    <ul class="dispositivos-lista">
     <li>
 
-<img src="img/tv.png" alt="Icone de televisão">
+<img src="/img/tv.png" alt="Icone de televisão">
 <h3 class="Lista-item">TV</h3>
 
     </li>
@@ -55,17 +54,17 @@
 </li>
 <li>
 
-   <img src="img/celular.png" alt="Icone de celular">
+   <img src="/img/celular.png" alt="Icone de celular">
 <h3 class="lista-item">Celular</h3>
    </li>
 </ul>
 </section>
 <footer class="rodape">
-<img src="img/computador prig" alt="Icone de computador">
+<img src="/img/computador.png" alt="Icone de computador">
 </ul>
 </section>
 <footer class="rodape">
-<img src="img/Logo.png" alt="Alura" class="rodape-logo">
+<img src="/img/Logo.png" alt="Alura" class="rodape-logo">
     <ul class="rodape-Lista">
    <li class="lista-link">
   <a href="#">Idioma</a>
