--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <ul class="dispositivos-lista">
     <li>
 
-<img src="" alt="Icone de televisão">
+<img src="/img/tv.png" alt="Icone de televisão">
 <h3 class="Lista-item">TV</h3>
 
     </li>
